# Polygone

./: .gitignore  Engine.h  Makefile.am  Makefile.in  README.md  TOPD.sln  TOPD.vcxproj  TOPD.vcxproj.filters  configure  configure.ac  main.cpp
SDL-1.2.15/lib/x86/: SDL_gfx.lib
autom4te.cache/: output.0  requests  traces.0  traces.1
ozcollidelib-1.1.1/lib/x86/: ozcollide.lib
res/: test.yaml
src/: Collision.cpp  Collision.h  Engine.cpp  Engine.h  Group.cpp  Group.h  Input.cpp  Input.h  Loader.cpp  Loader.h  Orb.cpp  Orb.h  Physics.cpp  Physics.h  PlayerStatus.cpp  PlayerStatus.h  Position.cpp  Position.h  Render.cpp  Render.h  Sound.cpp  Sound.h  System.h  main.cpp
yaml-cpp/lib/: yaml-cpp.lib
